--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "parcel:build": "parcel build src/index.html --target web --no-source-maps --no-cache",
     "clean": "rimraf dist .cache .cache-loader .parcel-cache",
     "dev": "npm-run-all clean parcel:serve",
-    "build": "npm-run-all clean parcel:build",
+    "build": "npm-run-all clean stylelint parcel:build",
     "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'",
     "stylelint": "stylelint src/**/*.scss"
   },
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/uoc-advanced-html-css/uoc-boilerplate#readme",
   "devDependencies": {
+    "@namics/stylelint-bem": "^9.0.0",
     "@parcel/transformer-sass": "^2.9.3",
     "autoprefixer": "^10.4.15",
     "npm-run-all": "^4.1.5",
@@ -47,9 +48,12 @@
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-recommended-scss": "^13.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-itcss": "^0.4.0",
     "stylelint-scss": "^5.2.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2"
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "stylelint-selector-bem-pattern": "^3.0.1"
   }
 }
