--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "targets": {
     "web": {
       "context": "browser",
-      "publicUrl": "./",
+      "publicUrl": "./index.html",
       "engines": {
         "browsers": "last 2 versions, > 0.5%, not dead"
       }
